# Snake_Game

./: .gitignore  CMakeLists.txt  Makefile  README.md  scores.txt
src/: Food.cpp  Food.h  Game.cpp  Game.h  Graph.cpp  Graph.h  ScoreManager.cpp  ScoreManager.h  Snake.cpp  Snake.h  main.cpp
